inicio de sesion y registro

--- a/public/styles.css
+++ b/public/styles.css
@@ -14,7 +14,7 @@
     color: #333;
 }
 .plantas-hero {
-    background-image: url('/images/mclaren-3.jpg');
+    background-image: url('/images/imagen.jpg');
     background-size: cover;
     background-position: center;
     height: 450px;
